Protótipo de média fidelidade - Login

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -11,3 +11,4 @@ nav:
     - Home: index.md
     - Historias de usuário: User Stories\userStories.md
     - Backlog: Backlog\backlog.md
+    - Protótipo: Prototipo\prototipo.md
