Protótipos das telas de Login e Cadastro

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -9,6 +9,6 @@ theme:
     primary: 'indigo'
 nav:
     - Home: index.md
-    - Historias de usuário: User Stories\userStories.md
-    - Backlog: Backlog\backlog.md
-    - Protótipo: Prototipo\prototipo.md
+    - Historias de usuário: User Stories/userStories.md
+    - Backlog: Backlog/backlog.md
+    - Protótipo: Prototipo/prototipo.md
