--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -9,5 +9,6 @@ theme:
     primary: 'indigo'
 nav:
     - Home: index.md
+    - Visão do Produto: visaodoproduto.md
     - Historias de usuário: User Stories\userStories.md
-    - Backlog: Backlog\backlog.md
+    #- Backlog: Backlog\backlog.md
