--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -12,8 +12,8 @@ nav:
     - Historias de usuário: User Stories/userStories.md
     - Backlog: Backlog/backlog.md
     - Protótipo: Prototipo/prototipo.md
-    - EAP: EAP\eap.md
+    - EAP: EAP/eap.md
     - Visão do Produto: visaodoproduto.md
-    - Historias de usuário: User Stories\userStories.md
+    - Historias de usuário: User Stories/userStories.md
     #- Backlog: Backlog\backlog.md
 
