--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -15,5 +15,6 @@ nav:
     - EAP: EAP\eap.md
     - Visão do Produto: visaodoproduto.md
     - Historias de usuário: User Stories\userStories.md
+    - Plano de Riscos: gestaoDoProjeto/planoDeRisco.md
     #- Backlog: Backlog\backlog.md
 
