--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
   - Protótipo: Prototipo/prototipo.md
   - EAP: EAP/eap.md
   - Visão do Produto: visaodoproduto.md
+  - Identidade visual: identidadeVisual/identidadeVisual.md
   - Historias de usuário: User Stories\userStories.md
   - Plano de Riscos: gestaoDoProjeto/planoDeRisco.md
   - Código de Conduta: codigoConduta/codConduta.md
