--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -16,4 +16,4 @@ jobs:
         with:
           python-version: 3.x
       - run: pip install mkdocs
-      - run: cd docs && mkdocs build -v -s
+      - run: cd docs && mkdocs build -s
