#46 Adicionando comanando de instalação do tema.

--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -16,4 +16,5 @@ jobs:
         with:
           python-version: 3.x
       - run: pip install mkdocs
+      - run: pip install mkdocs-material
       - run: cd docs && mkdocs build -s
