--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -15,7 +15,9 @@ nav:
   - EAP: EAP/eap.md
   - Visão do Produto: visaodoproduto.md
   - Historias de usuário: User Stories\userStories.md
-  - Plano de Riscos: gestaoDoProjeto/planoDeRisco.md
+  - Custo e Risco:
+    - Plano de Riscos: gestaoDoProjeto/planoDeRisco.md
+    - Plano de Custos: gestaoDoProjeto/planoDeCusto.md
   - Código de Conduta: codigoConduta/codConduta.md
 
   #- Backlog: Backlog\backlog.md
