--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,7 @@ jobs:
             python-version: 3.x
       - run: pip install mkdocs
       - run: pip install mkdocs-material
+      - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
       - run: cd docs && mkdocs gh-deploy --verbose --strict --clean --force
