Adicionando docs da Sprint 1 na navbar do pages

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -17,5 +17,6 @@ nav:
   - Historias de usuário: User Stories\userStories.md
   - Plano de Riscos: gestaoDoProjeto/planoDeRisco.md
   - Código de Conduta: codigoConduta/codConduta.md
+  - Sprints: Sprints/Sprint_1.md
 
   #- Backlog: Backlog\backlog.md
