Adicionando docs da Sprint 1 na navbar do pages

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -26,5 +26,6 @@ nav:
     - Sprint 1: Sprints/Sprint_1.md
     - Sprint 2: Sprints/Sprint_2.md
   - Estorias de usuario: GuiaDeContribuicao/guiaDeContribuicao.md
+  - Sprints: Sprints/Sprint_1.md
 
   #- Backlog: Backlog\backlog.md
