Adicionando docs da Sprint 1 na navbar do pages

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -41,5 +41,7 @@ nav:
     - Guia de contribuição: GuiaDeContribuicao/guiaDeContribuicao.md
     - Código de Conduta: codigoConduta/codConduta.md
   
+  - Estorias de usuario: GuiaDeContribuicao/guiaDeContribuicao.md
+  # - Sprints: Sprints/Sprint_1.md
 
   #- Backlog: Backlog\backlog.md
