Adicionando documentação da Sprint 2

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -22,10 +22,9 @@ nav:
   - Documento de arquitetura: projeto/arquitetura.md
   - Modelagem de Dados: modelagemDados/modelagemDeDados.md
   - Código de Conduta: codigoConduta/codConduta.md
+  - Guia de Contribuicão: GuiaDeContribuicao/guiaDeContribuicao.md
   - Sprints:
     - Sprint 1: Sprints/Sprint_1.md
     - Sprint 2: Sprints/Sprint_2.md
-  - Estorias de usuario: GuiaDeContribuicao/guiaDeContribuicao.md
-  - Sprints: Sprints/Sprint_1.md
 
   #- Backlog: Backlog\backlog.md
