Adicionando documentação de atas de reunião

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -13,6 +13,7 @@ nav:
   - Backlog: Backlog/backlog.md
   - Protótipo: Prototipo/prototipo.md
   - EAP: EAP/eap.md
+  - Comunicação: atasDeReuniao/atasReuniao.md
   - Visão do Produto: visaodoproduto.md
   - Identidade visual: identidadeVisual/identidadeVisual.md
   - Historias de usuário: User Stories/userStories.md
