Adicionando mais documentos necessários

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -25,7 +25,7 @@ nav:
     - Quadro de conhecimentos: gestaoDoProjeto/quadroConhecimento.md
     - Plano de Riscos: gestaoDoProjeto/planoDeRisco.md
     - Plano de Custos: gestaoDoProjeto/planoDeCusto.md
-    - Atas de reunião: atasDeReuniao/atasReuniao.md
+    - Plano de Comunicação: atasDeReuniao/atasReuniao.md
     - Gráfico de Gantt: gestaoDoProjeto/graficoGantt.md
   
   - Documentos das Sprints:
