Adicionando planning da Sprint 3

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -31,7 +31,8 @@ nav:
   - Documentos das Sprints:
     - Sprint 1: Sprints/Sprint_1.md
     - Sprint 2: Sprints/Sprint_2.md
-
+    - Sprint 3: Sprints/Sprint_3.md
+  
   - Políticas do projeto:
     - Guia de contribuição: GuiaDeContribuicao/guiaDeContribuicao.md
     - Código de Conduta: codigoConduta/codConduta.md
