Adição da documentação da sprint

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -32,6 +32,7 @@ nav:
     - Sprint 1: Sprints/Sprint_1.md
     - Sprint 2: Sprints/Sprint_2.md
     - Sprint 3: Sprints/Sprint_3.md
+    - Sprint 5: Sprints/Sprint_5.md
   
   - Políticas do projeto:
     - Guia de contribuição: GuiaDeContribuicao/guiaDeContribuicao.md
