--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -36,12 +36,14 @@ nav:
     - Sprint 1: Sprints/Sprint_1.md
     - Sprint 2: Sprints/Sprint_2.md
     - Sprint 3: Sprints/Sprint_3.md
+    - Sprint 4: Sprints/Sprint_4.md
+
   
   - Políticas do projeto:
     - Guia de contribuição: GuiaDeContribuicao/guiaDeContribuicao.md
     - Código de Conduta: codigoConduta/codConduta.md
   
-  - Estorias de usuario: GuiaDeContribuicao/guiaDeContribuicao.md
+  - Estorias de usuario: User Stories/userStories.md
   - Modelagem de Dados: modelagemDados/modelagemDeDados.md
 
   #- Backlog: Backlog\backlog.md
