--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -37,7 +37,8 @@ nav:
     - Sprint 2: Sprints/Sprint_2.md
     - Sprint 3: Sprints/Sprint_3.md
     - Sprint 4: Sprints/Sprint_4.md
-
+    - Sprint 5: Sprints/Sprint_5.md
+    - Sprint 6: Sprints/Sprint_6.md
   
   - Políticas do projeto:
     - Guia de contribuição: GuiaDeContribuicao/guiaDeContribuicao.md
