Documentação Sprint 7 Planning e Review

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -35,6 +35,7 @@ nav:
     - Sprint 4: Sprints/Sprint_4.md
     - Sprint 5: Sprints/Sprint_5.md
     - Sprint 6: Sprints/Sprint_6.md
+    - Sprint 7: Sprints/Sprint_7.md
 
   
   - Políticas do projeto:
