Adicionando instruções para instalação do frontend no manual de instalação.

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -19,6 +19,7 @@ nav:
     - Protótipos: Prototipo/prototipo.md
     - Documento de arquitetura: projeto/arquitetura.md
     - Identidade visual: identidadeVisual/identidadeVisual.md
+    - Manual de instalação: manualInstalacao/manualInstalacao.md
 
   - Gestão do projeto:
     - Quadros de pareamento: gestaoDoProjeto/quadroPareamento.md
