Adicionando o doc no mkdocs.yml

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -19,6 +19,7 @@ nav:
     - Protótipos: Prototipo/prototipo.md
     - Documento de arquitetura: projeto/arquitetura.md
     - Identidade visual: identidadeVisual/identidadeVisual.md
+    - Planejado x Realizado: planejadoXrealizado/planejadoXrealizado.md
 
   - Gestão do projeto:
     - Quadros de pareamento: gestaoDoProjeto/quadroPareamento.md
