--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -21,6 +21,7 @@ nav:
       - Identidade visual: identidadeVisual/identidadeVisual.md
       - Manual de instalação: manualInstalacao/manualInstalacao.md
       - Documento de Qualidade: qualidade.md
+      - Planejado x Realizado: planejadoXrealizado/planejadoXrealizado.md
 
 
   - Gestão do projeto:
